bilder caroussel etc.

--- a/indeX.html
+++ b/indeX.html
@@ -37,38 +37,11 @@
   </nav>
 
 
-
-  <!-- Versuch einen fixed Header zu ertsellen
-Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
-
-<div class="title" id ="myTitle">
-    <h1>Fresa</h1>
-</div>
-
-<script>
-
-  window.onscroll = function() {myFunction()};
-
-    var title = document.getElementById("myTitle");
-    var sticky = title.offsetTop;
-
-    function myFunction() {
-        if (window.pageYOffset >= sticky) {
-            title.classList.add("sticky");
-      } else {
-            title.classList.remove("sticky");
-      }
-  }
-    }
-  }
-
-</script>
-
--->
-  <!-- Ende javascript -->
-
   <div class="intro_image">
-    <div class="overlay">
+    <div class="">
+      <img class="mySlides fade overlay" src="./Pics/saison.JPG" style="width:100%;max-height:100%">
+      <img class="mySlides fade overlay" src="./Pics/hühner.jpg" style="width:100%;max-height:100%">
+      <img class="mySlides fade overlay" src="./Pics/feld.jpg" style="width:100%;max-height:100%">
     </div>
     <h2 class="SFD">Sustainable Fresh Delivery</h2>
   </div>
@@ -89,12 +62,26 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
   </div>
 
   <div class="section Alleinstellungsmerkmale">
-    <h2 class="Kapitelüberschrift">Darum ist Fresa einzigartig</h2>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-      aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-      no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-      diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-      et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    <h2 class="Kapitelüberschrift">Einzigartiger Service</h2>
+    <p>Entspannt durch den Tag <br /><br />
+
+Fresa gibt seinen Kunden die Möglichkeit zu jeder gewünschten Uhrzeit die Bestellung persönlich abzuholen. Schluss mit weingefassten Zeitfenstern und langem, ungeduldigen Warten, ohne dass Haus verlassen zu können.
+
+<br /><br /> Frische Ware ohne Zwischenhändler<br /><br />
+
+Das Fresa (Zwischen-)lager dient viel mehr dem ordentlichen Verpacken der Bestellungen der Kunden, als ein Räumlichkeit, in der man Ware lange aufbewahrt, bis sie nicht mehr frisch ist. Fresa liefer frische, regionale Lebensmittel direkt vom Feld in deine Speisekammer.
+
+<br /><br /> Bezug zur Regionalität schaffen <br /><br />
+
+Die Bezeichnung "regional" hat viel zu sehr an Bedeutung verloren. Fresa möchte seinen Mitgliedern den wertvollen Bezug zur Regionalität wieder näherbringend und lernen, welche Lebensmittel wann Saison haben.
+
+<br /><br /> Frei wählbare Lieferstationen<br /><br />
+
+Fresa stellt eine Vielzahl von Speisekammern zur Verfügung in jeder Ecke Ihrer Stadt. Sie wollen ihre frische Ware auf dem Weg nachhause einsammeln? Dann wählen sie eine Speisekammer in der Nähe ihres zuhause. Sie möchten sich auf der Arbeit in der Mittagspause mit ein paar Kollegen etwas gutes kochen? Dann wählen sie doch einfach eine Speisekammer in der Nähe ihres Arbeitsplatzes und sammeln es vor Arbeitsbeginn ein.
+
+<br /><br /> Zeit sparen<br /> <br />
+
+Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte, dass sie sich bewusst und gesund ernähren können, ohne dafür wertvolle Zeit ihres wohlverdienten Feierabends zu verlieren. Während sie noch arbeiten, Erledigungen machen oder anderen Verpflichtungen nachgehen, stellt Fresa ihre persönliche Bestellung bereit. Suchen sie sich eine Speisekammer auf ihrem Heimweg aus, können sie diese ohne einen weiteren Umweg zu gehen einsammeln.
     </p>
   </div>
 
@@ -133,26 +120,33 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
     <h2 class="Kapitelüberschrift Verbraucher">Wer nutzt Fresa?</h2>
     <div class="Verbraucher_image">
     </div>
-    <p>Um den möglichen Nutzer besser kennen zu lernen, wurden Befragungen und ausführliche Interviews geführt. Ziel dieser
-      Befragungen war es, Meinungen und Erfahrungen zum Thema Lieferdienste für Lebensmittel und regionale Lebensmittel selber
+    <p>Um den Nutzer besser kennen zu lernen, wurden Befragungen und ausführliche Interviews geführt. Ziel dieser
+      Befragungen war es, Meinungen und Erfahrungen zum Thema Lieferdienste für Lebensmittel und regionale Lebensmittel
       zu sammeln. Diese Feldrecherche wurde an den verschiedensten Orten gehalten, wie dem Wochenmarkt in Darmstadt, Offenbach
-      und Frankfurt. Zu dem wurden Erfahrungen aus Amsterdam mit in die Recherche einbezogen, da die Niederlande sehr viel
-      weiter ist, was neue interessante Services angeht. In den Niederlanden wird schon seit mehreren Jahren von den großen
-      Supermarkt- ketten wie „Albert Heijn” ein Lieferservice angeboten. Dieser ist aber nur für besondere Anlässe angedacht,
-      da er erst ab einem Einkauf ab 70€ angeboten wird. So fällt dieses Angebot für viele Alleinlebende weg, da sie selten
-      einen so großen Einkauf tätigen. Darüber hinaus werden viele Arbeitsstätten täglich mit fertigem Essen beliefert. Wie
-      für die Niederlande üblich, wird dies per Fahrradkurier ausgeliefert. Dies ist gerade in Amsterdam sehr vorteilhaft,
-      da dort fast alles mit dem Fahrrad erledigt werden kann. Befragte aus Darmstadt und Umgebung haben mit den Angeboten
-      von Lieferservices gemischte Erfahrungen. Bei den deutschen E-Food Angeboten existiert wie in den Niederlanden auch
-      ein hoher Mindestbestellwert. Dieser liegt bei 40 Euro und ist abschreckend für die meisten Kunden. Dies ist auch bei
-      den Nutzerbefragungen herausgekommen.
+      und Frankfurt. Zu dem wurden Erfahrungen aus Amsterdam mit in die Recherche einbezogen. Befragte aus Darmstadt und
+      Umgebung haben mit den biherigen Angeboten von Lieferservices gemischte Erfahrungen gesammelt. Immer ist ein hoher
+      Mindestbestellwert vonnöten. Dieser liegt bei mindestens 40€ und ist abschreckend für viele potenzielle Kunden.
+      <!-- Was ist das für ein merwürdiger Text?
+        Um den möglichen Nutzer besser kennen zu lernen, wurden Befragungen und ausführliche Interviews geführt. Ziel dieser
+        Befragungen war es, Meinungen und Erfahrungen zum Thema Lieferdienste für Lebensmittel und regionale Lebensmittel
+        zu sammeln. Diese Feldrecherche wurde an den verschiedensten Orten gehalten, wie dem Wochenmarkt in Darmstadt, Offenbach
+        und Frankfurt. Zu dem wurden Erfahrungen aus Amsterdam mit in die Recherche einbezogen, da die Niederlande sehr viel
+        weiter ist, was neue interessante Services angeht. In den Niederlanden wird schon seit mehreren Jahren von den großen
+        Supermarkt- ketten wie „Albert Heijn” ein Lieferservice angeboten. Dieser ist aber nur für besondere Anlässe angedacht,
+        da er erst ab einem Einkauf ab 70€ angeboten wird. So fällt dieses Angebot für viele Alleinlebende weg, da sie selten
+        einen so großen Einkauf tätigen. Darüber hinaus werden viele Arbeitsstätten täglich mit fertigem Essen beliefert. Wie
+        für die Niederlande üblich, wird dies per Fahrradkurier ausgeliefert. Dies ist gerade in Amsterdam sehr vorteilhaft,
+        da dort fast alles mit dem Fahrrad erledigt werden kann. Befragte aus Darmstadt und Umgebung haben mit den Angeboten
+        von Lieferservices gemischte Erfahrungen. Bei den deutschen E-Food Angeboten existiert wie in den Niederlanden auch
+        ein hoher Mindestbestellwert. Dieser liegt bei 40 Euro und ist abschreckend für die meisten Kunden. Dies ist auch bei
+        den Nutzerbefragungen herausgekommen.
+      -->
     </p>
   </div>
   <div class="section tineText">
     <h2 class="Kapitelüberschrift Tine">Das ist Tine.</h2>
-    <p>Tine ist in Nordhessen aufgewachsen und möchte gern frische Lebensmittel in ihr Leben integrieren, da sie sich von Grund
-      auf gesund ernährt. Sie ist daran interessiert eine ausgewogene Work-Life-Balance zu haben. Ihr Mann und sie sind Foodies
-      und kochen leidenschaftlich gerne. Sie verfolgen die neusten Trends für die Küche. Beide sind berufstätig und haben
+    <p>Tine ist in Nordhessen aufgewachsen und möchte gerne frische Lebensmittel in ihr Leben integrieren, da sie sich von Grund
+      auf gesund ernährt. Ihr Mann und sie sind Foodies und kochen leidenschaftlich gerne. Sie verfolgen die neusten Trends für die Küche. Beide sind berufstätig und haben
       sehr wenig Zeit einzukaufen. Sie sind beide äußerst technikaffin und täglich im Internet. Tine legt großen Wert auf
       die ganzjährige Verfügbarkeit ihr Lieblingsprodukte Paprika und Zucchini. An einem typischen Wochentag ist Tine von
       morgens gegen 07:30 Uhr bis abends gegen 18 Uhr arbeiten. In der Mittagspause hat sie am liebsten etwas selbstgemachtes
@@ -300,6 +294,27 @@ Gefunden auf https://www.w3schools.com/howto/howto_js_sticky_header.asp
 
         <script type='text/javascript' src="jquery.js"></script>
       </div>
+
+
+      <script type='text/javascript'>
+        var slideIndex = 0;
+        showSlides();
+
+        function showSlides() {
+            var i;
+            var slides = document.getElementsByClassName("mySlides");
+            var dots = document.getElementsByClassName("dot");
+            for (i = 0; i < slides.length; i++) {
+               slides[i].style.display = "none";
+            }
+            slideIndex++;
+            if (slideIndex > slides.length) {slideIndex = 1}
+            for (i = 0; i < dots.length; i++) {
+            }
+            slides[slideIndex-1].style.display = "block";
+            setTimeout(showSlides, 2000); // Change image every 2 seconds
+        }
+      </script>
 
 </body>
 
