--- a/indeX.html
+++ b/indeX.html
@@ -6,6 +6,8 @@
   <title>Fresa</title>
   <meta charset="utf-8" />
   <link href="styleX.css" rel="stylesheet">
+  <script type='text/javascript' src="jquery.js"></script>
+
 
   <title></title>
 </head>
@@ -13,6 +15,7 @@
 <body>
 
   <nav>
+
     <div class="title">
       <h1>Fresa</h1>
     </div>
@@ -38,11 +41,12 @@
 
 
   <div class="intro_image">
-    <div class="">
+    <div class="overlay">
+      </div>
       <img class="mySlides fade overlay" src="./Pics/saison.JPG" style="width:100%;max-height:100%">
       <img class="mySlides fade overlay" src="./Pics/hühner.jpg" style="width:100%;max-height:100%">
       <img class="mySlides fade overlay" src="./Pics/feld.jpg" style="width:100%;max-height:100%">
-    </div>
+
     <h2 class="SFD">Sustainable Fresh Delivery</h2>
   </div>
 
@@ -177,90 +181,107 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
     </div>
     <h2 class="Kapitelüberschrift Fresa_Design">Was macht Fresa?</h2>
     <div class="section Was_macht_Fresa">
-      <p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel
-        geht. Bei der Begrüßung angefangen, wird der Kaufprozess von mehreren Ereignissen begleitet. Diese führen dazu, dass
-        der Kunde einen Bezug zum Produkt und zum Erzeuger entwickelt. Hierzu gehören aber auch die Ware anfassen, daran
-        riechen und das Produkt mit allen Sinnen erleben. Das alles schafft die nötige Vertrauensbasis und ist wesentlicher
-        Bestandteil beim Kauf von regionalen Lebensmitteln. Menschen, die bewusst regionale Lebensmittel kaufen, möchten
-        auf diese Dinge nicht verzichten. Umfragen auf städtischen Wochenmärkten bestätigten dies. Die eben genannten Faktoren
-        fallen im Online Lebensmittelhandel weg und sind so gut wie nicht zu ersetzen. Darum ist es notwendig, einen Online
-        Markt für regionale Lebensmittel mit einer Anlaufstelle zu kombinieren, die dazu dient, dem Kunden einen Bezug zum
-        Produkt sowie zum Erzeuger zu ermöglichen.
+      <p>
+        Fresa ist ein Unternehmen, dass den Liefer- und Bestellprozess von regionalen
+        Erzeugnissen vereinfacht. Das System richtet sich an Menschen, die bereits regionale
+        Lebensmittel beziehen, oder dies in Zukunft tun möchten. Fresa integriert sich in den Alltag der Menschen und versorgt diese mit Informationen über regionalen Lebensmitteln.
+        Bestellungen werden in personalisierten Boxen an die Fresa Speisekammern geliefert. Hierbei beträgt die Entfehrnung vom Wohnort des Kunden zu der nächstmöglichen Speisekammer maximal fünf Gehminuten.
       </p>
     </div>
   </div>
-  <div class="section">
+
+  <div class="section Bestandteile">
     <h2 class="Kapitelüberschrift FresaBestandteile">Fresa Bestandteile</h2>
-    <img src="./Pics/mal.PNG" alt="">
+    <div class="FresaKonzept_image">
+    </div>
+
     <h3 class="Kapitelpunkte FresaKonzept">Fresa</h3>
     <div class="Fresa-Konzept">
-      <p>Regionale Waren holt Fresa direkt beim Erzeuger ab und liefert sie in das stadtnah gelegene Mikrodepot. Der Nutzer
-        kann die Produkte von Fresa entweder selbst abholen oder sich in der Fresa Clipbox liefern lassen.
+      <p>Regionale Waren holt Fresa direkt beim Erzeuger ab und liefert sie in das stadtnah gelegene Mikrodepot. Der Nutzerkann die Produkte von Fresa entweder selbst abholen oder sich in der Fresa Clipbox liefern lassen.
       </p>
     </div>
   </div>
 
-
-  <div class="section Was_ist_Fresa">
-    <h2 class="Kapitelüberschrift">Was ist Fresa?</h2>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-      aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-      no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-      diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-      et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-    </p>
+  <div class="section Mikrodepot">
+    <div class="FresaMikrodepot_image">
+    </div>
+    <h3 class="Kapitelpunkte FresaMikrodepot">Fresa Mikrodepot</h3>
+    <div class="Fresa-Mikrodepot">
+      <p>Das Fresa Mikrodepot hat drei Funktionen:
+        klassischer Lagerraum mit Kühlung, marktähnlicher Verkauf
+        mit Probiermöglichkeit und offene Küche mit Sitzbereich.
+        Der klassische Lagerraum dient zur Kommissionierung
+        der Abokisten, enthält eine kleine Packstraße, und
+        bietet den Erzeugern die Möglichkeit Waren einfach
+        direkt zur Vermarktung weitergeben zu können.
+      </p>
+    </div>
   </div>
 
-  <div class="section Bestandteile" id="wasistfresa">
-    <h2 class="Kapitelüberschrift">Bestandteile von Fresa</h2>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-      aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-      no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-      diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-      et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-    </p>
+  <div class="section Vermarktungsprinzip">
+    <h3 class="Kapitelpunkte Vermarktungsprinzip">Erzeugernahes Vermarktungsprinzip</h3>
+    <div class="Fresa-Vermarktungsprinzip">
+      <p>Fresa vermarktet die Produkte der Erzeuger, erwirtschaftet aber deutlich weniger Gewinn beim Einkauf der Waren als ein marktüblicher Händler, wie es zum Beispiel bei einem Verkauf an einen Großhändler oder eine Handelskette gegeben wäre. Fresa und die Erzeuger sind zwar unterschiedliche Firmen, Fresa unterstützt durch seine kleinen Gewinnmargen beim Wareneinkauf aber den Erzeuger.
+      </p>
+    </div>
   </div>
-  <img src="./Pics/mal.png" alt="Bio" width="300px" height="300px" margin-left="5px" margin-bottom="20px">
 
-  <script type='text/javascript' src="jquery.js"></script>
+  <div class="section Krummes_Gemüse">
+    <h3 class="Kapitelpunkte KrummesGemüse">Krummes Gemüse</h3>
+    <div class="Fresa-KrummesGemüse">
+      <p>Fresa agiert erzeugernah: im Geschäftsmodell von Fresa ist ein neuer Absatzmarkt für krumm gewachsene Produkte, wie es etwa beim Anbau von Möhren, Gurken, Kohl, Zucchini oder Spargel oft vorkommt, einkalkuliert. Im gängigen Großhandel finden Erzeugnisse, die außerhalb einer früher EU-genormten, mittlerweile handelsinternen, normierten Klassifizierung und Regelung gewachsen sind, kaum Absatz und müssen vom Erzeuger verfüttert oder vernichtet werden. Fresa bietet den Erzeugern an, diese  Waren anzukaufen. Um den Nutzern die Waren verständlich zu machen, werden sie als Solidarprodukte in Kombination mit der Unterstützung eines gemeinnützigen Projekts verkauft.
+      </p>
+    </div>
+  </div>
 
+  <div class="section Was_Gibt_Es_In_Der_Region">
+    <h3 class="Kapitelpunkte WasGibtEsInDerRegion">Was gibt es in der Region?</h3>
+    <div class="Fresa-WasGibtEsInDerRegion">
+      <p>Das Mikrodepot soll den Nutzern die Möglichkeit geben, die Waren und das regionale Konzept erfühlbar zu machen. Im Marktbereich des Mikrodepots werden die Waren nach der Entfernung ihres Produktionsortes sortiert zum Verkauf aufgebaut, ähnlich wie bei einem Marktstand oder einer Markthalle.
+      </p>
+    </div>
+  </div>
 
   <div class="Materialstudie_image">
     <div class="overlay5">
     </div>
-    <h2 class="Kapitelüberschrift">Unsere Materialien</h2>
-    <div class="section Materialstudie">
-      <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore
-        magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd
-        gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing
-        elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero
-        eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum
-        dolor sit amet.
+    <h2 class="Kapitelüberschrift Unsere_Materialien">Unsere Materialien</h2>
+    <div class="Materialien">
+      <p>
+        Fresa ist ein Unternehmen, dass den Liefer- und Bestellprozess von regionalen
+        Erzeugnissen vereinfacht. Das System richtet sich an Menschen, die bereits regionale
+        Lebensmittel beziehen, oder dies in Zukunft tun möchten. Fresa integriert sich in den Alltag der Menschen und versorgt diese mit Informationen über regionalen Lebensmitteln.
+        Bestellungen werden in personalisierten Boxen an die Fresa Speisekammern geliefert. Hierbei beträgt die Entfehrnung vom Wohnort des Kunden zu der nächstmöglichen Speisekammer maximal fünf Gehminuten.
       </p>
+    </div>
+    <div class="Material_image1">
+    </div>
+    <div class="Material_image2">
     </div>
   </div>
 
   <div class="section Preise">
-    <h2 class="Kapitelüberschrift">Unsere Preise</h2>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-      aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-      no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-      diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-      et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
+    <h2 class="Kapitelüberschrift Pricing">Unsere Preise</h2>
+    <div class="Pricing_image">
+  </div>
+</div>
+
+<div class="Technik_image">
+  <div class="overlay6">
+  </div>
+  <h2 class="Kapitelüberschrift Technik">So funktionierts</h2>
+  <div class="SoFunktionierts">
+    <p>
+      Fresa ist ein Unternehmen, dass den Liefer- und Bestellprozess von regionalen
+      Erzeugnissen vereinfacht. Das System richtet sich an Menschen, die bereits regionale
+      Lebensmittel beziehen, oder dies in Zukunft tun möchten. Fresa integriert sich in den Alltag der Menschen und versorgt diese mit Informationen über regionalen Lebensmitteln.
+      Bestellungen werden in personalisierten Boxen an die Fresa Speisekammern geliefert. Hierbei beträgt die Entfehrnung vom Wohnort des Kunden zu der nächstmöglichen Speisekammer maximal fünf Gehminuten.
     </p>
   </div>
+</div>
 
-  <div class="section Technik" id="technik">
-    <h2 class="Kapitelüberschrift">So funktionierts</h2>
-    <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-      aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren,
-      no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed
-      diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam
-      et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-    </p>
-  </div>
-
-  <div class="technikVideo">
+  <h2 class="Kapitelüberschrift WorksLike">Workslike Prototyp</h2>
+  <div class="TechnikVideo">
     <div class="video centered-content">
       <a class="circle-canvas close-video" href="javascript:void(0)" id="video-close" rel="tooltipTOP" data-original-title="close"></a>
       <video width="70%" height="80%" id="video" class="video" controls>
@@ -269,8 +290,29 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
     </div>
   </div>
 
+  <div class="section LooksLike">
+    <h2 class="Kapitelüberschrift Looks_like">Lookslike Prototyp</h2>
+    <p>Der direkte Kontakt vom Verkäufer zum Kunden, das ist es, was Menschen schätzen, wenn es um regionale Lebensmittel geht.
+      Bei der Begrüßung angefangen, wird der Kaufprozess von mehreren Ereignissen begleitet. Diese führen dazu, dass der
+      Kunde einen Bezug zum Produkt und zum Erzeuger entwickelt. Hierzu gehören aber auch die Ware anfassen, daran riechen
+      und das Produkt mit allen Sinnen erleben. Das alles schafft die nötige Vertrauensbasis und ist wesentlicher Bestandteil
+      beim Kauf von regionalen Lebensmitteln. Menschen, die bewusst regionale Lebensmittel kaufen, möchten auf diese Dinge
+      nicht verzichten. Umfragen auf städtischen Wochenmärkten bestätigten dies. Die eben genannten Faktoren fallen im Online
+      Lebensmittelhandel weg und sind so gut wie nicht zu ersetzen. Darum ist es notwendig, einen Online Markt für regionale
+      Lebensmittel mit einer Anlaufstelle zu kombinieren, die dazu dient, dem Kunden einen Bezug zum Produkt sowie zum Erzeuger
+      zu ermöglichen.
+    </p>
+    <div class="Lookslike_image1">
+    </div>
+    <div class="Lookslike_image2">
+    </div>
+    <div class="Lookslike_image3">
+    </div>
+  </div>
+
+
   <div class="Kontakt" id=kontakt>
-    <h2 class="Kapitelüberschrift">Kontakt</h2>
+    <h2 class="Kapitelüberschrift Team">Kontakt</h2>
     <div class="row">
       <div class="column">
         <img src="./Pics/marco.png" alt="Marco" style="width:100%" "height:100%">
@@ -294,6 +336,39 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
 
         <script type='text/javascript' src="jquery.js"></script>
       </div>
+    </div>
+  </div>
+        <div class="Z-Q">
+        <h2 class="Kapitelüberschrift ZitateQuellen">Zitate & Quellen</h2>
+        <div class="Zitate-Quellen">
+        <p>1 Bundesministerium für Ernährung und Landwirtschaft, Ökobarometer 2017, Seite 14 https://www.bmel.de/SharedDocs/Downloads/Ernaehrung/Oekobarometer2017.pdf?__blob=publicationFile [aufgerufen am 15.04.2013, 11:00 Uhr]
+          	2 „Zielkonflikt beim Lebensmitteleinkauf: Konventionell regional, ökologisch regional oder ökologisch aus entfernteren Regionen"; http://orgprints.org/30487/ [aufgerufen am 15.04.2017, 11:16 Uhr])
+            3 „Wie steht der Verbraucher heutzutage zur Regionalität?" http://www.dlg-verbraucher.info/fileadmin/downloads/studien/DLG_Regionalitaet_2013.pdf [aufgerufen am 14.04.2018, 18:45 Uhr]
+            4 taste! food & beverage communication GmbH in Zusammenarbeit mit DLG e.V., Günther Nessel und Lukas Dudek: Wie steht der Verbraucher heutzutage zur Regionalität?, 2013, S. 3.
+            5 Günther Nessel und Lukas Dudek: „Unter Regionalität verstehe ich“, http://www.dlg-verbraucher.info/fileadmin/downloads/studien/DLG_Regionalitaet_2013.pdf[aufgerufen am 14.04.2018, 18:30 Uhr]
+            6 Günther Nessel und Lukas Dudek: „Regionalität steht für folgende Werte“, http://www.dlg-verbraucher.info/fileadmin/downloads/studien/DLG_Regionalitaet_2013.pdf[aufgerufen am 14.04.2018, 18:30 Uhr]
+            7 Günther Nessel und Lukas Dudek: „Der Kontakt zu regionalen Marken ist gestiegen“, http://www.dlg-verbraucher.info/fileadmin/downloads/studien/DLG_Regionalitaet_2013.pdf[aufgerufen am 14.04.2018, 18:30 Uhr]
+            8 http://www.atkearney.de/documents/856314/2519692/BIP-lebensmittel-regional-ist-gefragter-als-bio.pdf [aufgerufen am 14.04.2017, 9:23 Uhr]
+            9 A.T.Kearney: „Gründe für den Kauf regionaler Ware beim bevorzugten Händler“, http://www.atkearney.de/documents/856314/2519692/BIP-lebensmittel-regional-ist-gefragter-als-bio.pdf [aufgerufen am 14.04.2017, 09:00 Uhr]
+            10 A.T.Kearney: „Gründe für den Kauf regionaler Ware beim bevorzugten Händler“, http://www.atkearney.de/documents/856314/2519692/BIP-
+            lebensmittel-regional-ist-gefragter-als-bio.pdf [aufgerufen am 14.04.2017, 09:00 Uhr]
+            11 „Bioregio-OWL“ von Ökolandbau NRW (http://www.oekolandbau-nrw.de/bioregio-owl/betriebsportraits.html [aufgerufen am 21.04.2018, 09:15 Uhr])
+            12 „Amazon fresh eFood 2018“; http://www.mafowerk.de/studien/shopper-insights-amazon-fresh-efood-2018/ [aufgerufen am 17.05.2018, 18:15 Uhr]
+            13 „Nr.1 Online-Supermarkt für frische Lebensmittel”; https://presse.rewe.de/artikel/spitzenposition-vom-rewe-lieferservice/[aufgerufen am 02.05.2018, 12:30 Uhr]
+            14 Peter Krajewski: “Die besten Online-Supermärkte Deutschlands”, http://www.chip.de/artikel/Die-besten-Onlinesupermaerkte-Deutschlands-im-CHIP-Test_136094376.html [aufgerufen am 12.05.2018, 12:30 Uhr]
+            15 https://www.einzelhandel.de/index.php?option=com_attachments&task=download&id=9449, Seite 4 [aufgerufen am 15.05.2018, 12:05]
+            16 https://www.einzelhandel.de/index.php?option=com_attachments&task=download&id=9449, Seite 5 [aufgerufen am 15.05.2018, 12:05
+            17 Statista Global Consumer Survey 2018 [abgerufen am 15.05.2018, 13:09]
+            18 Statista Global Consumer Survey 2018 [abgerufen am 15.05.2018, 13:09]
+            19 https://de.statista.com/outlook/253/137/lebensmittel-getraenke/deutschland#market-onlineRevenueShare; [abgerufen am 15.05.2018, 14:08]
+            20 https://speisekammer.lavialla.it/weiter-info.aspx, Die Fattoria La Vialla und die Speisekammer, Z. 10-11.
+            21 http://www.lavialla.it/bottega/bio-sossen.php, Fattoria La Vialla
+        </p>
+      </div>
+      </div>
+    </div>
+
+
 
 
       <script type='text/javascript'>
@@ -311,10 +386,34 @@ Man kann dem Tag nicht mehr Stunden geben aber dem Tag mehr Leben. Fresa möchte
             if (slideIndex > slides.length) {slideIndex = 1}
             for (i = 0; i < dots.length; i++) {
             }
-            slides[slideIndex-1].style.display = "block";
+            slides[slideIndex -1].style.display = "block";
             setTimeout(showSlides, 2000); // Change image every 2 seconds
         }
+      /*
+      var header = $('nav');
+
+        function headerOpacity() {
+          if (window.pageYOffset > 20) {
+            header.addClass("navopacity");
+          } else {
+            header.removeClass("navopacity");
+          }
+        }
+
+        // When the user scrolls the page, execute myFunction
+        window.onscroll = function() {headerOpacity()};
+
+        
       </script>
+
+    <!--  <script type='text/javascript' src="jquery.js">
+        $(document).ready(function(){
+          $("nav").scroll(function(){
+            $(this).opacity(0.5);
+          });
+        });
+-->
+
 
 </body>
 
